# habit-tracker

./: .env.example  .flake8  .gitignore  pyproject.toml
config/: celery.py  settings.py  urls.py
habits/: models.py  serializers.py  tasks.py  tests.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
