[project]
name = "project-5"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "celery>=5.5.3",
    "django>=5.2.7",
    "django-celery-beat>=2.8.1",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-yasg>=1.21.11",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "redis>=7.0.1",
]

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "flake8>=7.3.0",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
]
